[ fix #9 ] Fix components for whitespaces

--- a/style/style.less
+++ b/style/style.less
@@ -189,6 +189,10 @@
                 color: @text-color-selected
             }
         }
+
+        .expr-space {
+            display: inline;
+        }
     }
 
     .marker {
